# RamenGL

./: .gitignore  CMakeLists.txt  README.md  get_assets.sh  setup.bat  setup.sh  shipit.bat  shipit.sh  task01.cpp  task02.cpp
assets/shaders/: computeshader.comp  task02.vert  task05.frag  task05.vert
dependencies/: meg_md2.h
dependencies/tinyobjloader/: README.md
dependencies/tinyobjloader/tests/: Makefile  tester.cc
doc/: resources.md
ramen/: ramen.cpp  ramen.h  rgl_camera.h  rgl_defines.h  rgl_filesystem.cpp  rgl_filesystem.h  rgl_image.cpp  rgl_image.h  rgl_math.cpp  rgl_math.h  rgl_md2_model.h  rgl_model.h  rgl_platform.cpp  rgl_platform.h  rgl_shader.h
shaders/: task01.frag  task01.vert
tasks/: task02.md  task03.md  task04.md  task05.md  task06.md  task08.md
tasks_src/: CMakeLists.txt
tasks_src/task02/: CMakeLists.txt  task02.cpp
tasks_src/task03/: CMakeLists.txt
tasks_src/task05/: CMakeLists.txt  task05.cpp
